--- a/02_Data_files/package.json
+++ b/02_Data_files/package.json
@@ -9,5 +9,11 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "csv-parse": "^5.5.3",
+    "express": "^4.18.2",
+    "js-yaml": "^4.1.0",
+    "xml2json": "^0.12.0"
+  }
 }
