--- a/15_Assignments/mandatory_2/10a/package.json
+++ b/15_Assignments/mandatory_2/10a/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "graphql": "^16.8.1"
+    "express": "^4.19.2",
+    "express-graphql": "^0.12.0",
+    "graphql": "^15.8.0"
   }
 }
